traces/bug_870.txt
examples++-load/iovtk.cpp:2782: error: DEAD_STORE
  The value written to &reftri (type int) is never used.
Showing all 1 steps of the trace


examples++-load/iovtk.cpp:2782:3: Write of unused value
2780.     bool swap = false;
2781.     int reftetra=1; 
2782.     int reftri = 1;
          ^
2783.     
2784.     if( nargs[0] )  reftetra = GetAny<long>((*nargs[0])(stack));
